# GoodMao2

./: .gitignore  .sobelow-conf  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mix.exs
.github/: dependabot.yml
.github/workflows/: ci.yml
ansible/: .gitignore  .sops.yaml  README.md
ansible/inventory/: hosts.yml
ansible/playbooks/: deploy-goodmao2.yml  setup-server.yml
assets/css/: app.css
assets/js/: app.js  avatar_cropper_hook.js  base64url.js  disclosure_state_hook.js  push_manager_hook.js  reconnect_flash.js  service_worker.js  timezone_detect.js  webauthn_hook.js  weight_chart_hook.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
doc/: architecture.md  deployment.md  glossary.md  roadmap.md  web-application-development-common-practices.md
doc/adr/: 0000-template.md  0001-record-architecture-decisions.md  0002-culture-first-localization.md  0003-pet-lifecycle.md  0004-log-visibility.md  0005-media-storage.md  0007-error-reporting.md  0008-soft-delete.md  0009-log-edit-revisions.md  0011-notifications-and-messaging.md  0012-vet-access-model.md  0013-second-factor-authentication.md  0014-resource-based-authorization.md  0015-structured-one-table-logging.md  0016-scope-based-auth-and-first-user-admin.md  0017-rust-nif-native-boundary.md  0018-timezone-display-policy.md  0019-medication-schedules-and-reminders.md  0020-profile-images.md  README.md
lib/: goodmao2.ex  goodmao2_web.ex
lib/goodmao2/: accounts.ex  application.ex  logs.ex  (+12 more)
native/goodmao2_native/: Cargo.toml
native/goodmao2_native/src/: lib.rs
test/: test_helper.exs
(+247 files in other folders)
